# MLDS6_Project

./: README.md  pyproject.toml
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/deployment/: deploymentdoc.md
docs/modeling/: baseline_models.md
scripts/data_acquisition/: main.py
scripts/eda/: main.py
scripts/evaluation/: main.py
scripts/preprocessing/: main.py
scripts/training/: main.py
src/nombre_paquete/database/: __init__.py
src/nombre_paquete/evaluation/: __init__.py
src/nombre_paquete/models/: __init__.py
src/nombre_paquete/preprocessing/: __init__.py
src/nombre_paquete/training/: __init__.py
